--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             margin-bottom: 40px;
         }
         </style>
-        <a href="my-coding-journey.html">My Coding Journey</a>
+        <a href="my-coding-journey.html">mycodingjourney</a>
 </body>
 </html>
+
