--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             margin-bottom: 40px;
         }
         </style>
-        <a href="my-coding-journey.html">mycodingjourney</a>
+        <a href="mycodingjourney.html">mycodingjourney</a>
 </body>
 </html>
+
 
