--- a/mycodingjourney.html
+++ b/mycodingjourney.html
@@ -267,7 +267,7 @@ table {
                 <li><strong>Images enhance content:</strong> Using proper file paths and alt text</li>
                 <li><strong>Links connect pages:</strong> Navigation makes a collection of pages into a website</li>
             </ul>
-             <p>example images <img src="images/boat.jpg" alt="boat"></p>
+             <h3>Example Images</h3><img src="images/boat.jpg" alt="boat"></p>
             <img src="images/city.jpg" alt="city">
             <img src="images/truck.jpg" alt="truck">
 </body>
