--- a/mycodingjourney.html
+++ b/mycodingjourney.html
@@ -267,7 +267,8 @@ table {
                 <li><strong>Images enhance content:</strong> Using proper file paths and alt text</li>
                 <li><strong>Links connect pages:</strong> Navigation makes a collection of pages into a website</li>
             </ul>
-             <h3>Example Images</h3><img src="images/boat.jpg" alt="boat">
+            <h3>Example Images</h3
+            ><img src="images/boat.jpg" alt="boat">
             <img src="images/city.jpg" alt="city">
             <img src="images/truck.jpg" alt="truck">
 </body>
