--- a/mycodingjourney.html
+++ b/mycodingjourney.html
@@ -270,4 +270,26 @@ table {
                 <li><strong>Images enhance content:</strong> Using proper file paths and alt text</li>
                 <li><strong>Links connect pages:</strong> Navigation makes a collection of pages into a website</li>
             </ul>
+            <h3>Ending example of how my table ended with the information ive learned</h3>
+            <table bgcolor="#F0E68C" border="1" cellpadding="10" cellspacing="0">
+        <tr bgcolor="#D3D3D3">
+            <th>Title</th>
+            <th>Year</th>
+            <th>Total box-office earnings</th>
+        </tr>
+        <tr>
+            <td>Avatar</td>
+            <td>2009</td>
+            <td>$2,847,246,203</td>
+        </tr>
+        <tr>
+            <td>Avengers : Endgame</td>
+            <td>2019</td>
+            <td>$2,797,501,315</td>
+        </tr>
+        <tr>
+            <td>Avatar : Way of Water</td>
+            <td>2022</td>
+            <td>$2,334,484,620</td>
+        </tr>
         </html>
