--- a/mycodingjourney.html
+++ b/mycodingjourney.html
@@ -292,5 +292,39 @@ table {
             <td>2022</td>
             <td>$2,334,484,620</td>
         </tr>
+    <h3>Another example</h3>
+    
+    <table bgcolor="#E6F3FF" border="1" cellpadding="10" cellspacing="0">
+        <tr bgcolor="#4A90E2">
+            <th style="color: white;">Title</th>
+            <th style="color: white;">Year Released</th>
+            <th style="color: white;">Total Revenue</th>
+        </tr>
+        <tr>
+            <td>Grand Theft Auto V</td>
+            <td>2013</td>
+            <td>$8,600,000,000</td>
+        </tr>
+        <tr>
+            <td>Dungeon Fighter Online</td>
+            <td>2005</td>
+            <td>$20,000,000,000</td>
+        </tr>
+        <tr>
+            <td>CrossFire</td>
+            <td>2007</td>
+            <td>$13,900,000,000</td>
+        </tr>
+        <tr>
+            <td>Pokémon (entire franchise)</td>
+            <td>1996</td>
+            <td>$90,000,000,000</td>
+        </tr>
+        <tr>
+            <td>Minecraft</td>
+            <td>2011</td>
+            <td>$3,800,000,000</td>
+        </tr>
+    </table>
             </body>
         </html>
