--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
       </head>
       <body>
         <div id="menu">
-     <a href="#">Home</a>
-     <a href="#">About Us</a>
-     <a href="#">Contact</a>
+     <a href="index.html">Home</a>
+     <a href="about.html">About Us</a>
+     <a href="contact.html">Contact</a>
 </div>
            <div class="gallery">
                 <a href="avenger-1.html"><img src="images/avengers_01.jpg"/></a>
@@ -18,4 +18,5 @@
                 <a href="avenger-6.html"><img src="images/avengers_06.jpg"/></a>
            </div>
       </body>
+
 </html>
