--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <body>
         <div id="menu">
      <a href="index.html">Home</a>
-     <a href="about.html">About Us</a>
+     <a href="About.html">About Us</a>
      <a href="contact.html">Contact</a>
 </div>
            <div class="gallery">
@@ -20,3 +20,4 @@
       </body>
 
 </html>
+
